[workspace]
members = [
	"crates/backend",
	"crates/frontend",
	"crates/common",
	"crates/books"
]
exclude = [ "global_common" ]

[workspace.dependencies]
validator = { version = "0.16", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
thiserror = "1.0"
urlencoding = "2.1"
anyhow = "1.0"
serde_qs = "0.10"
tokio = "1.17"
serde-xml-rs = "0.6"
rand = "0.8"
num_enum = "0.5"
regex = "1.6"
base64 = "0.13"

# Backend Specific
sqlx = { version = "0.7.0-alpha.2", dependencies = ["macros"] }