[package]
name = "books-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO: Correct. Using two different bins pointing to same path to help build into own file name.
[[bin]]
name = "backend-bundled"
path = "src/main.rs"
required-features = ["bundled"]

[[bin]]
name = "books-backend"
path = "src/main.rs"

[features]
# Used to dictate that we should bundle everything in app folder.
bundled = ["include_dir"]

[dependencies]
include_dir = { version = "0.7.3", optional = true }

common = { path = "../../global_common", features = ["backend"] }

common-local = { path = "../common", features = ["backend"] }
bookie = { path = "../books" }

actix = "0.13"
actix-web = "4.2"
actix-files = "0.6"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-identity = "0.5"
actix-multipart = "0.4"
actix-web-actors = "4.1"

async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { workspace = true, features = ["full"] }

serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
serde-xml-rs = { workspace = true }
serde_qs = { workspace = true, features = ["actix4"] }
toml_edit = { version = "0.15", features = ["easy"] }

anyhow = { workspace = true }
thiserror = { workspace = true }

tracing-subscriber = "0.3"
tracing-actix-web = "0.6"
tracing = "0.1"

bcrypt = "0.13"
sha2 = "0.10"
strsim = "0.10"

clap = { version = "4.0", features = ["derive"] }
chrono = { workspace = true }
image = "0.24"
lazy_static = "1.4"
rand = { workspace = true }
regex = { workspace = true }
urlencoding = { workspace = true }
validator = { workspace = true }

lettre = "0.10"

rusqlite = { workspace = true, features = [ "bundled", "trace", "blob", "serde_json", "chrono" ] }