[package]
name = "books-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO: Correct. Using two different bins pointing to same path to help build into own file name.
[[bin]]
name = "backend-bundled"
path = "src/main.rs"
required-features = ["bundled"]

[[bin]]
name = "books-backend"
path = "src/main.rs"

[features]
# Used to dictate that we should bundle everything in app folder.
bundled = ["include_dir"]

[dependencies]
include_dir = { version = "0.7", optional = true }

common = { path = "../../global_common", features = ["backend"] }

common-local = { path = "../common", features = ["backend"] }
bookie = { path = "../books" }

actix = "0.13"
actix-web = "4.7"
actix-files = "0.6"
actix-session = { version = "0.10", features = ["cookie-session"] }
actix-identity = "0.8"
actix-multipart = "0.7"
actix-web-actors = "4.3"
uaparser = "0.6"

async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { workspace = true, features = ["full"] }

serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
serde-xml-rs = { workspace = true }
serde_qs = { workspace = true, features = ["actix4"] }
toml_edit = { version = "0.22" }

anyhow = { workspace = true }
thiserror = { workspace = true }

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
tracing = "0.1"

base64 = { workspace = true }
bcrypt = "0.15"
sha2 = "0.10"
strsim = "0.11"

clap = { version = "4.5", features = ["derive"] }
chrono = { workspace = true }
image = "0.25"
lazy_static = "1.4"
rand = { workspace = true }
regex = { workspace = true }
urlencoding = { workspace = true }
validator = { workspace = true }

lettre = "0.11"

# rusqlite = { workspace = true, features = [ "bundled", "trace", "blob", "serde_json", "chrono" ] }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "macros",
    "migrate",
] }
