[package]
name = "bookie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["filesystem"]
# TODO: Use so we could use this lib in another non-filesystem crate
filesystem = ["zip"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.5.1"

mobi = "0.7"

xml-rs = "0.8"
# serde_json = "1.0"
log = "0.4"
thiserror = "1.0"

zip = { version = "0.5.13", optional = true }

urlencoding = "2.1"