[package]
name = "bookie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["filesystem"]
# TODO: Use so we could use this lib in another non-filesystem crate
filesystem = ["binstall-zip"]


[dependencies]
serde = { workspace = true }
serde-xml-rs = { workspace = true }

mobi = "0.7"

xml-rs = "0.8"
# serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

binstall-zip = { version = "0.6", optional = true }

urlencoding = { workspace = true }
base64 = "0.13"