[package]
name = "common-local"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
backend = ["common/backend", "rusqlite"]
frontend = ["common/frontend"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"

bitflags = "1.3"
chrono = "0.4"
num_enum = "0.5"
thiserror = "1.0"
validator = { version = "0.15", features = ["derive"] }

common = { path = "../../global_common" }


# Backend
rusqlite = { version = "0.27", optional = true }