[package]
name = "common-local"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
backend = ["common/backend", "rusqlite"]
frontend = ["common/frontend"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
urlencoding = { workspace = true }

bitflags = "1.3"
chrono = { workspace = true }
num_enum = "0.5"
thiserror = { workspace = true }
validator = { workspace = true }

common = { path = "../../global_common" }


# Backend
rusqlite = { workspace = true, optional = true }