[package]
name = "common-local"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
backend = ["common/backend", "sqlx"]
frontend = ["common/frontend", "getrandom"]

[dependencies]
serde_repr = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
urlencoding = { workspace = true }

bitflags = "2.6"
chrono = { workspace = true }
num_enum = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }
rand = { workspace = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
numeric-sort = "0.1"

common = { path = "../../global_common" }


# Backend
sqlx = { workspace = true, optional = true }
