[package]
name = "books-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Used for global common SCSS
[build-dependencies]
grass = "0.11"


[dependencies]
common-local = { path = "../common", features = ["frontend"] }

common = { path = "../../global_common", features = ["frontend"] }


# reqwest = { version = "0.11", features = ["multipart"] }
tokio = { version = "1.15", features = ["time"] }

serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
serde_json = "1.0"
serde_qs = "0.10"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-utils = "0.1"
gloo-file = "0.2"
gloo-timers = "0.2"
js-sys = "0.3"

base64 = "0.13"
lazy_static = "1.4"
urlencoding = "2.1"
futures = "0.3"
reqwasm = "0.5"


anyhow = "1.0"
log = "0.4"

yew = "0.19"
yew-agent = "0.1"
yew-router = "0.16"
yew-hooks = "0.1"

validator = { version = "0.15", features = ["derive"] }
wasm-logger = "0.2"



[dependencies.web-sys]
version = "0.3"
features = [
	"DomTokenList",
	"FormData",
	"Headers",
	"Request",
	"RequestInit",
	"RequestMode",
	"Response",
	"Window",
	"DataTransfer",
	"Document",
	"Element",
	"HtmlIFrameElement",
	"HtmlSelectElement",
	"CssStyleDeclaration",
	"Touch",
	"TouchEvent",
	"TouchList"
]