[package]
name = "books-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Used for global common SCSS
[build-dependencies]
grass = "0.11"


[dependencies]
common-local = { path = "../common", features = ["frontend"] }

common = { path = "../../global_common", features = ["frontend"] }

tokio = { workspace = true, features = ["time"] }

serde = { workspace = true }
serde_urlencoded = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-utils = "0.1"
gloo-file = "0.2"
gloo-timers = "0.2"
js-sys = "0.3"

chrono = { workspace = true, features = ["wasmbind"] }
base64 = "0.13"
lazy_static = "1.4"
urlencoding = { workspace = true }
num_enum = { workspace = true }
futures = "0.3"
reqwasm = "0.5"


anyhow = { workspace = true }
log = { workspace = true }

yew = "0.19"
yew-agent = "0.1"
yew-router = "0.16"
yew-hooks = "0.1"

validator = { workspace = true }
wasm-logger = "0.2"



[dependencies.web-sys]
version = "0.3"
features = [
	"DomTokenList",
	"DomRect",
	"FormData",
	"Headers",
	"Request",
	"RequestInit",
	"RequestMode",
	"Response",
	"Window",
	"DataTransfer",
	"Document",
	"Element",
	"HtmlIFrameElement",
	"HtmlSelectElement",
	"CssStyleDeclaration",
	"Touch",
	"TouchEvent",
	"TouchList"
]