[package]
name = "books-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
web = []
android = []

default = ["web"]


# Used for global common SCSS
[build-dependencies]
grass = "0.13"


[dependencies]
common-local = { path = "../common", features = ["frontend"] }
common = { path = "../../global_common", features = ["frontend"] }
editor = { git = "https://github.com/oqurum/html-editor" }

tokio = { workspace = true, features = ["time"] }

serde = { workspace = true }
serde_urlencoded = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-events = "0.2"
gloo-utils = "0.2"
gloo-file = "0.3"
gloo-timers = "0.3"
js-sys = "0.3"

itertools = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true, features = ["wasmbind"] }
base64 = { workspace = true }
lazy_static = "1.4"
urlencoding = { workspace = true }
num_enum = { workspace = true }
futures = "0.3"
reqwasm = "0.5"


anyhow = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

yew = "0.21"
yew-agent = "0.3"
yew-router = "0.18"
yew-hooks = "0.3"

validator = { workspace = true }
wasm-logger = "0.2"


[dependencies.web-sys]
version = "0.3"
features = [
	"DomTokenList",
	"DomRectList",
	"DomRect",
	"FormData",
	"Headers",
	"Request",
	"RequestInit",
	"RequestMode",
	"Response",
	"Window",
	"DataTransfer",
	"Document",
	"Element",
	"HtmlIFrameElement",
	"HtmlSelectElement",
	"CssStyleDeclaration",
	"Touch",
	"TouchEvent",
	"MouseEventInit",
	"HtmlCanvasElement",
	"CanvasRenderingContext2d",
	"TouchList",
	"CaretPosition",
	"Selection",
	"Range",
	"Text",
]
